--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "precommit": "lint-staged",
+    "prepush": "npm run test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/express": "^4.17.21",
+    "@types/lint-staged": "^13.3.0",
     "@types/node": "^20.12.12",
+    "commitizen": "^4.3.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "pretty-quick": "^4.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
