--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
+    "format": "prettier --write",
+    "lint": "eslint --fix",
+    "lint:staged": "lint-staged",
     "precommit": "lint-staged",
     "prepush": "npm run test"
   },
