--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "start:dev": "nodemon",
     "format": "prettier --write",
     "lint": "eslint --fix",
     "lint:staged": "lint-staged",
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/lint-staged": "^13.3.0",
     "@types/node": "^20.12.12",
+    "@types/nodemon": "^1.19.6",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "commitizen": "^4.3.0",
@@ -37,6 +39,7 @@
     "husky": "^9.0.11",
     "i": "^0.3.7",
     "lint-staged": "^15.2.2",
+    "nodemon": "^3.1.0",
     "npm": "^10.8.0",
     "prettier": "^3.2.5",
     "pretty-quick": "^4.0.0",
