--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start:dev": "nodemon",
-    "format": "prettier --write",
+    "prisma:generate-migrations": "npx prisma migrate dev",
+    "prisma:apply-migrations": "npx prisma migrate deploy",
+    "format:code": "prettier --write && npx prisma format",
     "lint": "eslint --fix",
     "lint:staged": "lint-staged",
     "precommit": "lint-staged",
@@ -43,12 +45,17 @@
     "npm": "^10.8.0",
     "prettier": "^3.2.5",
     "pretty-quick": "^4.0.0",
+    "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "express": "^4.19.2"
+  },
+  "prisma": {
+    "schema": "src/adapters/driven/infrastructure/persistence/schema.prisma"
   }
 }
