--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "plugin:promise/recommended"
   ],
   "rules": {
+    "max-len": ["error", { "code": 80 }],
     "space-before-function-parent": 0,
     "import-helpers/order-imports": [
       "warn",
