--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "reflect-metadata": "^0.2.2"
   },
   "prisma": {
     "schema": "src/adapters/driven/infrastructure/persistence/schema.prisma"
