--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "express": "^4.19.2",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.2.2"
   },
   "prisma": {
