--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "fiap-tech-challenge",
   "version": "1.0.0",
   "description": "Order control system to ensure that the snack bar can serve customers efficiently, similar to the totems currently present in large fast-food franchises",
-  "main": "index.js",
+  "main": "src/bootstrap/server.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
     "start:dev": "nodemon",
+    "start:build": "tsc && node dist/bootstrap/server.ts",
     "prisma:generate-migrations": "npx prisma migrate dev",
     "prisma:apply-migrations": "npx prisma migrate deploy",
     "format:code": "prettier --write && npx prisma format",
@@ -24,9 +25,11 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/lint-staged": "^13.3.0",
     "@types/node": "^20.12.12",
     "@types/nodemon": "^1.19.6",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "commitizen": "^4.3.0",
@@ -54,8 +57,10 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "qrcode": "^1.5.3",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "swagger-ui-express": "^5.0.0"
   },
   "prisma": {
     "schema": "src/adapters/driven/infrastructure/persistence/schema.prisma"
