--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "allowJs": true,
-    "removeComments": true
+    "removeComments": true,
+    "resolveJsonModule": true
   },
   "exclude": ["dist"]
 }
